Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "isemenkov/modules",
+    "name": "isemenkov/laravel-modules",
     "description" : "laravel modules library",
     "keywords": ["laravel"],
     "type": "library",
